# HMM

./: .clang-tidy  .clangformat  .gitignore  CMakeLists.txt  README.md
include/: main.hpp
libs/libspeech/: CMakeLists.txt
libs/libspeech/include/libspeech/: AudioFile.hpp  FFT_Windows.hpp  SoundClip.hpp  Window.hpp  sigproc.hpp  utils.hpp
libs/libspeech/src/: AudioFile.cpp  FFT_Windows.cpp  SoundClip.cpp  Window.cpp  sigproc.cpp  utils.cpp
src/: main.cpp
tests/: CMakeLists.txt  FFT_WindowTests.cpp  catch2Main.cpp
